# mod_proxy_nextjs

./: .editorconfig  .gitignore  ChangeLog  NEWS  README  README.md  autogen.sh  configure.ac
src/: Makefile.am  mod_proxy_nextjs.c
